Project detail   add version 1

--- a/frontend/src/assets/css/responsive.css
+++ b/frontend/src/assets/css/responsive.css
@@ -821,6 +821,14 @@
         top: 85%;
     }
 
+    .testimonial-card {
+        min-width: 260px;
+    }
+
+    .main-title {
+        font-size: 28px;
+    }
+
 }
 
 @media screen and (max-width:575px) {
