--- a/frontend/src/assets/css/responsive.css
+++ b/frontend/src/assets/css/responsive.css
@@ -81,6 +81,11 @@
     .text-overlay h3 {
         font-size: 80px;
     }
+
+    .gallery-main-img {
+        margin-top: -130px !important;
+    }
+
 }
 
 @media screen and (max-width:1199px) {
@@ -219,7 +224,7 @@
     }
 
     .about-main-img {
-        bottom: -18%;
+        bottom: -11%;
     }
 
     .parent-overlay-box-2 {
@@ -238,6 +243,17 @@
 
     .enter-btn {
         font-size: 19px !important;
+    }
+
+    .mui-footer img {
+        width: 80px;
+        height: auto;
+    }
+
+    .gallery-tabs-wrapper .tab {
+        padding: 7px 27px;
+        border-radius: 40px;
+        font-size: 16px;
     }
 }
 
@@ -481,9 +497,29 @@
         font-size: 14px;
     }
 
+    .social-list li a {
+        width: 32px;
+        height: 32px;
+    }
+
     .banner-content-right {
         right: 1%;
         max-width: 300px;
+    }
+
+    .gallery-main-img {
+        margin-top: -80px !important;
+    }
+
+    .floating-menu {
+        gap: 28px;
+        padding: 8px 18px;
+    }
+
+    .floating-menu a {
+        min-width: 55px;
+        color: #fff;
+        font-size: 17x;
     }
 }
 
@@ -728,9 +764,15 @@
         font-size: 26px;
     }
 
+    .gallery-dropdown {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .gallery-dropdown select {
         width: 100%;
-        max-width: 320px;
+        max-width: 100%;
         padding: 14px 48px 14px 18px;
         border-radius: 14px;
         border: 1px solid rgba(22, 23, 41, 0.25);
@@ -847,6 +889,20 @@
         font-size: 14px;
     }
 
+    .gallery-tabs-wrapper {
+        padding: 20px 0;
+    }
+
+    .mui-footer img {
+        width: 50px;
+        height: auto;
+    }
+
+    .gallery-dropdown {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media screen and (max-width:575px) {
@@ -1175,6 +1231,13 @@
         font-size: 14px;
     }
 
+    .gallery-main-img {
+        margin-top: -50px !important;
+    }
+
+    .gallery-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 @media screen and (max-width:425px) {
